# cg-tarefa-1

./: CMakeLists.txt  README.md  bezier.cpp  camera.cpp  curve.cpp  glad.c  object.cpp  shader.cpp
common/: CMakeLists.txt
dependencies/include/macos/bezier/: Bezier.h
dependencies/include/macos/camera/: Camera.h
dependencies/include/macos/curve/: Curve.h
dependencies/include/macos/glad/: glad.h
dependencies/include/macos/object/: Object.h
files/: ControlPoints.txt
models/Cube/: CuboTextured.mtl
models/Suzanne/: SuzanneTriTextured.mtl
shaders/: Phong.fs  Phong.vs  sprite.fs  sprite.vs
src/: main.cpp
tarefa-1/: RESULT.md  main.cpp
tarefa-2/: main.cpp
tarefa-3/: main.cpp
tarefa-4/: main.cpp
tarefa-5/: main.cpp
tarefa-6/: main.cpp
tarefa-atividade-vivencial-1/: main.cpp
tarefa-integralizacao-gb/: main.cpp
